modificar tablas de Prisma
